<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.manageproductsnavigationdrawer.activity.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tilSignupUsername">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:id="@+id/edtSignupUsername" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tilSignupUserPassword"
                android:layout_below="@id/tilSignupUsername">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/edtSignupUserPassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tilSignupEmail"
                android:layout_below="@id/tilSignupUserPassword">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edtSignupEmail" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnSignupProvincia"
                android:layout_below="@id/tilSignupEmail"
                android:layout_marginTop="15dp">
            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnSignupLocalidad"
                android:layout_below="@id/spnSignupProvincia"
                android:layout_marginTop="15dp">
            </android.support.v7.widget.AppCompatSpinner>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rgpSignupIsCompany"
                android:layout_below="@id/spnSignupLocalidad"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isCompany"
                    android:textSize="16sp"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:text="@string/client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbtSignupClient"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbtSignupCompany"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tilSignupCompany"
                android:layout_below="@id/rgpSignupIsCompany">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtSignupCompany"
                    android:hint="@string/businessName" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chbSignupUpdates"
                android:text="@string/chbEmailNotification"
                android:layout_below="@id/tilSignupCompany"
                android:layout_marginTop="15dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chbSignupTaS"
                android:text="@string/acceptTerms"
                android:layout_below="@id/chbSignupUpdates"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignupRegister"
                android:text="@string/ok"
                android:onClick="signup"
                android:backgroundTint="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/chbSignupTaS"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
