<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.usuario.manageproductsnavigationdrawer.fragment.ManageProductFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManageName">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/manageName"
            android:id="@+id/edtManageName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManageDescription"
        android:layout_below="@id/tilManageName" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/manageDetails"
            android:id="@+id/edtManageDetails" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManageDosage"
        android:layout_below="@id/tilManageDescription" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/manageDose"
            android:id="@+id/edtManageDose" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManageBrand"
        android:layout_below="@id/tilManageDosage" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/manageBrand"
            android:id="@+id/edtManageBrand" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManagePrice"
        android:layout_below="@id/tilManageBrand" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/managePrice"
            android:id="@+id/edtManagePrice" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilManageStock"
        android:layout_below="@id/tilManagePrice" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:hint="@string/manageStock"
            android:id="@+id/edtManageStock" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:id="@+id/lloManageOk" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manageOk"
            android:id="@+id/btnManageProductOk" />
    </LinearLayout>

</RelativeLayout>
